
checkbox-ng (2.2.0) unstable; urgency=medium

  * "new upstream version"

 -- Devices Certification Bot <robot@canonical.com>  Fri, 24 Mar 2023 06:12:52 +0000

checkbox-ng (2.1.0) unstable; urgency=medium

  * "new upstream version"

 -- Devices Certification Bot <robot@canonical.com>  Thu, 17 Nov 2022 09:51:15 +0000

checkbox-ng (2.0.0) unstable; urgency=medium

  * new upstream version

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Fri, 23 Sep 2022 19:08:47 +0200

checkbox-ng (1.19.0) unstable; urgency=medium

  [ Jenkins ]
  * "new upstream version"

 -- Jenkins <ubuntu@cert-jenkins-master-201506-18558.maas>  Tue, 23 Aug 2022 09:46:53 +0000

checkbox-ng (1.0.0-1) UNRELEASED; urgency=medium

  [ Sylvain Pineau ]
  * Major version: Plainbox integration in checkbox-ng.
  * "new upstream version"

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Fri, 09 Feb 2018 10:11:15 +0100

checkbox-ng (0.29-1) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * Fixed homepage (https)
  * Fixed VCS URL (https)

  [ Sylvain Pineau ]
  * new upstream version

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Wed, 05 Oct 2016 13:43:10 +0200

checkbox-ng (0.23-2) unstable; urgency=medium

  * debian/control: Add Breaks/Replaces rules after scripts ownership changes.
    Closes: #810353.

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Mon, 11 Jan 2016 15:12:03 +0100

checkbox-ng (0.23-1) unstable; urgency=medium

  * New upstream release. Closes: #740215.
  * Remove the checkbox-ng-service binary package.
  * debian/control: require plainbox 0.24 or more recent (new APIs and fixes)
  * debian/rules: Ensure scripts in /usr/bin are well provided by checkbox-ng

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Wed, 06 Jan 2016 11:36:34 +0100

checkbox-ng (0.22-1) unstable; urgency=medium

  * New upstream maintenance release
  * debian/control: require plainbox 0.24 or more recent (new APIs and fixes)
    and checkbox-support 0.22
