@@ -161,6 +161,7 @@ parts:
       - python3-requests-oauthlib
       - python3-urwid
       - python3-xlsxwriter
+      - python3-argcomplete
     python-packages:
       - tqdm
     after: [checkbox-support]
