@@ -40,13 +40,17 @@ CERTIFICATION_NS = 'com.canonical.certification::'
 
 
 class MergeReports():
-    def register_arguments(self, parser):
+    @staticmethod
+    def register_arguments(parser):
+        from argcomplete.completers import FilesCompleter
         parser.add_argument(
             'submission', nargs='*', metavar='SUBMISSION',
-            help='submission tarball')
+            help='submission tarball'
+        ).completer = FilesCompleter(['tar.xz'])
         parser.add_argument(
             '-o', '--output-file', metavar='FILE', required=True,
-            help='save combined test results to the specified FILE')
+            help='save combined test results to the specified FILE'
+        ).completer = FilesCompleter
 
     def _parse_submission(self, submission, tmpdir, mode="list"):
         try:
