@@ -1,0 +1,1 @@
+debian/completions/checkbox-cli checkbox-cli
