@@ -1,0 +1,1 @@
+eval "$(register-python-argcomplete3 checkbox-cli)"
