@@ -5,6 +5,7 @@ Maintainer: Checkbox Developers <checkbox-devel@lists.ubuntu.com>
 Uploaders: Sylvain Pineau <sylvain.pineau@canonical.com>
 Build-Depends: debhelper (>= 9),
                dh-python,
+               bash-completion (>= 1:2),
                python3-all,
                python3-distutils-extra,
                python3-docutils,
@@ -20,7 +21,8 @@ Build-Depends: debhelper (>= 9),
                python3-tk,
                python3-tqdm,
                python3-urwid,
-               python3-xlsxwriter
+               python3-xlsxwriter,
+               python3-argcomplete,
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.2
 
@@ -51,6 +53,7 @@ Depends: python3-jinja2,
          python3-tqdm,
          python3-urwid,
          python3-xlsxwriter,
+         python3-argcomplete,
          ${misc:Depends},
          ${python3:Depends}
 Breaks: python3-plainbox (<<1)
